# attachmentsv2

./: .gitignore  IMG_2160.HEIC  README.md  auto_adapter_example.py  chunking_demo.py  demo.py  demo_docx_processor.py  demo_excel_processor.py  demo_pptx_processor.py  demo_repo_processor.py  demo_selector.ipynb  demo_webpage_processor.py  final_test.py  processor_demo.py  pyproject.toml  simple_demo.py  specialized_processors_demo.py  split_demo.py  test.csv  vectorized_demo.py
.cursor/rules/: dsl-commands.mdc  project-standards.mdc
attachments/: __init__.py  adapt.py  core.py  load.py  matchers.py  modify.py  present.py  refine.py  simple.py
attachments/data/: sample.HEIC  sample.json  sample.txt  test_document.docx  test_workbook.xlsx
attachments/pipelines/: __init__.py  docx_processor.py  excel_processor.py  image_processor.py  pdf_processor.py  pptx_processor.py
